--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 .DS_Store
-node_modules
-/dist
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
+.history/
+dist/static
+dist/index.html
+dist/
+node_modules/
+false/
+.cache/
+.package-lock.json
+workspace/hosts
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -19,4 +19,3 @@ pnpm-debug.log*
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
